# storage/api-docs/api-docs.json
@@ -178,16 +178,6 @@
                             "type": "string"
                         },
                         "example": "代先华"
-                    },
-                    {
-                        "name": "member_id",
-                        "in": "query",
-                        "description": "member_id",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "108"
                     }
                 ],
                 "responses": {
